// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Dropdown should highlight button class when style equals highlight 1`] = `
<withHandlers(Component)
  arrowIcon="none"
  buttonContent="Dropdown"
  icon={true}
  isOpen={false}
  style="highlight"
  toggle={[Function]}
>
  <ul>
    <li
      key="0"
    >
      Manual
    </li>
    <li
      key="1"
    >
      Maximize Conventions
    </li>
    <li
      key="2"
    >
      Faster Results
    </li>
  </ul>
</withHandlers(Component)>
`;

exports[`components/Dropdown should not render children when isDisabled is true 1`] = `
<withHandlers(Component)
  arrowIcon="none"
  buttonContent="Dropdown"
  icon={true}
  idDisabled={true}
  isOpen={false}
  toggle={[Function]}
>
  <ul>
    <li
      key="0"
    >
      Manual
    </li>
    <li
      key="1"
    >
      Maximize Conventions
    </li>
    <li
      key="2"
    >
      Faster Results
    </li>
  </ul>
</withHandlers(Component)>
`;

exports[`components/Dropdown should not use .oui-arrow-inline--down when icon isEqual to triangle 1`] = `
<withHandlers(Component)
  arrowIcon="none"
  buttonContent="Dropdown"
  icon={true}
  isOpen={false}
  toggle={[Function]}
>
  <ul>
    <li
      key="0"
    >
      Manual
    </li>
    <li
      key="1"
    >
      Maximize Conventions
    </li>
    <li
      key="2"
    >
      Faster Results
    </li>
  </ul>
</withHandlers(Component)>
`;

exports[`components/Dropdown should render children when isOpen is true 1`] = `
<withHandlers(Component)
  arrowIcon="none"
  buttonContent="Dropdown"
  icon={true}
  isOpen={false}
  toggle={[Function]}
>
  <ul>
    <li
      key="0"
    >
      Manual
    </li>
    <li
      key="1"
    >
      Maximize Conventions
    </li>
    <li
      key="2"
    >
      Faster Results
    </li>
  </ul>
</withHandlers(Component)>
`;

exports[`components/Dropdown should use oui-button--full class when fullWidth is true 1`] = `
<withHandlers(Component)
  arrowIcon="none"
  buttonContent="Dropdown"
  fullWidth={true}
  icon={true}
  isOpen={false}
  toggle={[Function]}
>
  <ul>
    <li
      key="0"
    >
      Manual
    </li>
    <li
      key="1"
    >
      Maximize Conventions
    </li>
    <li
      key="2"
    >
      Faster Results
    </li>
  </ul>
</withHandlers(Component)>
`;
